--- a/package.json
+++ b/package.json
@@ -11,23 +11,64 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "vue": "^3.2.45"
+    "@element-plus/icons-vue": "^2.1.0",
+    "@unocss/reset": "^0.50.5",
+    "@vueuse/core": "^9.13.0",
+    "@vueuse/head": "^1.1.23",
+    "@xstate/vue": "^2.0.0",
+    "axios": "^1.3.4",
+    "classnames": "^2.3.2",
+    "dayjs": "^1.11.7",
+    "element-plus": "^2.3.0",
+    "nprogress": "^0.2.0",
+    "portal-vue": "^3.0.0",
+    "vue": "^3.2.45",
+    "vue-final-modal": "^4.0.11",
+    "vue-i18n": "^9.2.2",
+    "vue-router": "^4.1.6",
+    "vue-upload-component": "^2.8.23",
+    "vue3-perfect-scrollbar": "^1.6.1",
+    "watermark-package": "^2.1.2",
+    "xstate": "^4.37.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.36.0",
     "@changesets/cli": "^2.26.0",
     "@commitlint/cli": "^17.4.4",
     "@commitlint/config-conventional": "^17.4.4",
+    "@intlify/unplugin-vue-i18n": "^0.9.2",
+    "@types/classnames": "^2.3.1",
+    "@types/node": "^18.15.3",
+    "@types/nprogress": "^0.2.0",
+    "@vitejs/plugin-legacy": "^4.0.2",
     "@vitejs/plugin-vue": "^4.0.0",
+    "@vitejs/plugin-vue-jsx": "^3.0.0",
+    "@vue-macros/volar": "^0.9.0",
     "eslint": "^8.36.0",
     "husky": "^8.0.3",
+    "jsdom": "^21.1.1",
+    "msw": "^1.1.0",
+    "sass": "^1.59.3",
     "typescript": "^4.9.5",
+    "unocss": "^0.50.5",
+    "unplugin-auto-import": "^0.15.1",
+    "unplugin-element-plus": "^0.7.0",
+    "unplugin-vue-components": "^0.24.1",
+    "unplugin-vue-define-options": "^1.2.4",
+    "unplugin-vue-macros": "^1.10.0",
     "vite": "^4.1.4",
+    "vite-plugin-inspect": "^0.7.17",
+    "vite-plugin-version-mark": "^0.0.4",
+    "vite-svg-loader": "^4.0.0",
+    "vitest": "^0.29.3",
     "vue-tsc": "^1.2.0"
   },
   "husky": {
     "hooks": {
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
