--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ts-ctrp-core-metis-web-next",
-  "private": true,
   "version": "0.0.2",
+  "private": true,
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -20,6 +20,7 @@
     "classnames": "^2.3.2",
     "dayjs": "^1.11.7",
     "element-plus": "^2.3.0",
+    "lodash-es": "^4.17.21",
     "nprogress": "^0.2.0",
     "portal-vue": "^3.0.0",
     "vue": "^3.2.45",
@@ -38,6 +39,7 @@
     "@commitlint/config-conventional": "^17.4.4",
     "@intlify/unplugin-vue-i18n": "^0.9.2",
     "@types/classnames": "^2.3.1",
+    "@types/lodash-es": "^4.17.7",
     "@types/node": "^18.15.3",
     "@types/nprogress": "^0.2.0",
     "@vitejs/plugin-legacy": "^4.0.2",
