--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dayjs": "^1.11.7",
     "element-plus": "^2.3.0",
     "lodash-es": "^4.17.21",
+    "mitt": "^3.0.0",
     "nprogress": "^0.2.0",
     "portal-vue": "^3.0.0",
     "vue": "^3.2.45",
