--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ dist-ssr
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
+!.vscode/snippets.code-snippets
+!.vscode/settings.json
 .idea
 .DS_Store
 *.suo
