--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "jsdom": "^21.1.1",
     "msw": "^1.1.0",
     "sass": "^1.59.3",
+    "terser": "^5.17.1",
     "typescript": "^4.9.5",
     "unocss": "^0.50.5",
     "unplugin-auto-import": "^0.15.1",
