--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-VITE_PORT=3333
-VITE_APP_BASE_URL=/
-VITE_API_TOKEN=
+VITE_PORT = 3333
+VITE_APP_BASE_URL = /
 VITE_APP_TITLE = 供应链控制塔
-VITE_API_URL=https://scct.sf-express.com
+VITE_API_URL= https://metis-web.sit.sf-express.com/
