--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,10 @@
   "i18n-ally.localesPaths": [
     "src/locale"
   ],
-  "i18n-ally.keystyle": "nested"
+  "cSpell.words": [
+    "colour",
+    "typegen",
+    "xstate"
+  ],
+  "vue.codeActions.enabled": false
 }
